[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/img/tilesets/!Door1.png" type="Texture" id=1]
[ext_resource path="res://assets/scene/npc/Door.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 17.8885

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "door2",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "door1",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=9]
radius = 48.0

[node name="Door" type="StaticBody2D"]
pause_mode = 2
z_index = 3
collision_layer = 2048
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 32 )
z_index = 3
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 24 )
frames = SubResource( 8 )
animation = "door1"

[node name="Check" type="Timer" parent="."]

[node name="Door" type="Area2D" parent="."]
monitorable = false
collision_layer = 2048
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2( 0, 32 )
z_index = 3
shape = SubResource( 9 )
[connection signal="timeout" from="Check" to="." method="_on_Check_timeout"]
[connection signal="area_entered" from="Door" to="." method="_on_Door_area_entered"]
[connection signal="area_exited" from="Door" to="." method="_on_Door_area_exited"]
